# casper-circom

./: .gitignore  Cargo.toml  README.md
casper-circom/: Cargo.toml  README.md
casper-circom/circom/multiplier/: multiplier.r1cs  multiplier.wasm  readme.md
casper-circom/src/: generator.rs  lib.rs
circom-contract/: Cargo.toml  circuit.pem  proof.pem
circom-contract/src/: error.rs  main.rs
